--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,5 @@
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
+MQTT_BROKER_HOST=localhost
+MQTT_BROKER_PORT=1883
+MQTT_TOPIC=test/topic
